--- a/.presentation-template.html
+++ b/.presentation-template.html
@@ -67,9 +67,9 @@
               ><img
                   style="max-height: 450px;"
                   src="slides/images/react-buch-v2.jpg"
-              /><br />https://reactbuch.de</a
+              /><br/>https://reactbuch.de</a
               >
-              <br />
+              <br/>
             </div>
           </div>
         </section>
@@ -88,6 +88,17 @@
     public class X extends Y implements Serializable {
       private static String id = "123";
     }
+    ```
+  </textarea>
+        </section>
+        <section data-markdown>
+  <textarea data-template>
+    ## Die Beispiel-Anwendung
+
+    ---
+    ## Beispiel: Tooling mit GraphiQL und IntelliJ IDEA
+
+    ---
     ```
   </textarea>
         </section>
